# AURA

./: .env.example  .gitignore  ACADEMIC_RESEARCH_TEMPLATE.md  AURA_INTEGRATION_SUMMARY.md  INSTALL.md  MANIFEST.in  Makefile  PROJECT_STRUCTURE.md  PYPI_PUBLISH_INSTRUCTIONS.md  README.md  README.md.aura  ai_collaboration.md  ai_human_network_test_20251031_054310.json  ai_network_simulation_20251031_045230.json  ai_simulation_with_discovery_20251031_051151.json  aura  complete_optimization_pipeline_results.json  compression_report.json  compression_report_optimization.json  coverage.json  cumulative_learning_20251031_053310.json  demo_optimizations.py  docker-compose.dev.yml  docker-compose.yml  dockerfile.dev  domain_specific_template_ranges.md  enwik8_compression_32768_20251031_070110.json  enwik8_compression_65536_20251031_070151.json  final_summary.md  final_verification_9_runs.md  fixes_completed.md  fuzzy_config.json  gpu_implementation_guide.md  hardware_accelerated_test_results.json  honest_compression_test.py  honest_compression_test_1761929191.json  honest_compression_test_1761929358.json  honest_compression_test_1761929462.json  honest_compression_test_1761929600.json  honest_compression_test_1761929619.json  (+56 more)
.aura_cache/: adaptive_template_cache.json  cache_stats.json  ml_model.json  template_cache.json
.aura_cache_cumulative/: template_cache.db-shm  template_cache.db-wal
.aura_cache_parallel/: template_cache.db-shm  template_cache.db-wal
.aura_cache_run1/: template_cache.db  template_cache.db-shm
.aura_cache_run2/: template_cache.db  template_cache.db-shm
.aura_cache_run3/: template_cache.db  template_cache.db-shm
.aura_cache_simulation/: template_cache.db  template_cache.db-shm  template_cache.db-wal
.aura_cache_test/: template_cache.db  template_cache.db-shm  template_cache.db-wal
.github/workflows/: npm-build.yml  python-tests.yml
100MB Wikipedia to 3KB/: enwik8.txt.aura
audit/: compression_audit.db
audit/global-industry-integration/: compression_audit.db
audit/internet-medicine-cabinet/: compression_audit.db
audit_logs/: client_delivered.jsonl  metadata_only.jsonl
aura_compression/: acceleration.py  audit.py  audit_layer.py  compressor.py  templates.py
client/: demo.html
config/: docker-compose.dev.yml  docker-compose.yml  dockerfile
docs/: AURA_SYSTEM_CONTEXT.md  CI_CD_SETUP.md  INSTALL.md  ROADMAP.md  ai_to_ai_field_survey_2026-07-04.md  aiwire_dictionary_evolution.md  aiwire_proxy.md  aiwire_proxy_edge_readiness.md  aiwire_replay_log.md  aiwire_resume_cache.md  aiwire_session_dictionary.md  aiwire_session_fixtures.md  aiwire_v1_spec.md  api_stability.md  architecture.md  binary_semantic_header_optimization.md  cuda_fpga_solver_acceleration.md  deployment_guide.md  enwik8_benchmark_analysis.md  feature_guide.md  honest_assessment.md  partial_matching_implementation.md  simulation_10x1min_analysis.md  template_discovery_tuning.md  unified_binary_format.md
docs/api/: README.md  (+17 more)
examples/: README.md  __init__.py  aiwire_http_streaming_transport.py  aiwire_local_broker.py  aiwire_tcp_transport.py  aiwire_transport_common.py  aiwire_websocket_transport.py
js/: README.md  package-lock.json  package.json
results/: benchmark_results.json  complete_optimization_pipeline_results.json  comprehensive_performance_results.json  environmental_impact_assessment_results.json  hardware_accelerated_test_results.json  network_aware_test_results.json  performance_baseline.json  test_results.json  trace_analysis_results.json
rust/: README.md
scripts/: repro_enough_case.py
sidechain/: sidechain.db
test/: npm-api.test.js
test_results/: latest_test_report.txt
tests/: __init__.py  ai_human_network_simulation.py  ai_human_network_test_20251031_050758.json  ai_human_network_test_20251031_051838.json  ai_human_network_test_20251031_052420.json  ai_human_network_test_20251031_053232.json  ai_human_network_test_summary.md  ai_to_ai_network_simulation.py  comprehensive_performance_analysis.py  debug_format.py  honest_stress_test_100_processes.py  internet_compression_simulation.py  network_simulation.py  readme.md  realistic_single_user_test.py  run_10x1min_ai_to_ai.py  simulation_readme.md  test_10x1min_simulation.py  test_3min_simulation.py  test_60s_simulation.py  test_acceleration.py  test_ai_network_simulation.py  test_ai_network_simulation_with_discovery.py  test_ai_to_ai_partial_compression.py  test_ai_wire.py  test_ai_wire_token.py  test_aiwire_backend_comparison.py  test_aiwire_bandwidth_extrapolation.py  test_aiwire_benchmark_smoke.py  test_aiwire_coordinator_comparison.py  test_aiwire_dictionary_comparison.py  test_aiwire_dictionary_generation.py  test_aiwire_fixture_saturation.py  test_aiwire_hot_path_profile.py  test_aiwire_native_check_tool.py  test_aiwire_network_profiles.py  test_aiwire_proxy.py  test_aiwire_proxy_benchmark.py  test_aiwire_proxy_cluster_runner.py  test_aiwire_replay_log.py  (+75 more)
tools/: __init__.py  aiwire_network_profiles.py  analyze_ai_wire_benchmark.py  benchmark_ai_wire_z6.py  benchmark_aiwire_fixture_saturation.py  bootstrap_aura.py  build_aiwire_session_fixture_corpus.py  check_aiwire_native_backend.py  compare_aiwire_backends.py  compare_aiwire_coordinators.py  compare_aiwire_dictionaries.py  compress_large_file.py  compression_monitor.py  environmental_impact_assessment.py  extrapolate_aiwire_bandwidth.py  fuzzy_optimizer.py  healthcare_assessment.py  industry_infrastructure_impact_assessment.py  industry_integration_analysis.py  populate_domain_templates.py  profile_aiwire_hot_path.py  run_aiwire_network_suite.py  run_aiwire_proxy_cluster.py  stream_compress_enwik8.py  stream_compress_enwik8_with_discovery.py  stress_ai_wire_roundtrip_z6.py  training_data_generator.py  write_aiwire_replay_log.py
training_data/: api_training.json  bootstrap_config.json  bootstrap_test_results.json  combined_training.json  events_training.json  logs_training.json  messages_training.json  metadata.json  metrics_training.json  production_config.json
vscode-medicine-cabinet/: CHANGELOG.md  package-lock.json  package.json
(+288 files in other folders)
