[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aura-compression"
version = "2.0.1"
description = "AI-Optimized Hybrid Compression Protocol for Real-Time Communication"
readme = "README.md"
authors = [{name = "Todd Hendricks", email = "todd@auraprotocol.org"}]
license = {text = "Apache License 2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving :: Compression",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["compression", "ai", "chat", "websocket", "auralite", "compliance"]
dependencies = [
    "pytest>=7.0.0",
]
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[project.scripts]
aura-compress = "aura_compression.cli.compress:main"
aura-decompress = "aura_compression.cli.decompress:main"
aura-server = "aura_compression.cli.server:main"
aura-benchmark = "aura_compression.cli.benchmark:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
]
websocket = [
    "websockets>=10.0",
]

[project.urls]
Homepage = "https://github.com/hendrixx-cnc/AURA"
Documentation = "https://github.com/hendrixx-cnc/AURA/blob/main/docs/technical/DEVELOPER_GUIDE.md"
Repository = "https://github.com/hendrixx-cnc/AURA"
"Bug Tracker" = "https://github.com/hendrixx-cnc/AURA/issues"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
# coverage options (requires pytest-cov: pip install pytest-cov)
# addopts = "-ra -q --strict-markers --cov=src/aura_compression --cov-report=html --cov-report=term --cov-fail-under=80"
testpaths = ["tests"]
markers = [
    "asyncio: marks tests as async (using pytest-asyncio)",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
