[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aura-compression"
version = "2.0.3"
description = "Protocol-aware AIWire compression and data movement for AI-to-AI messages"
readme = "README.md"
authors = [{name = "Todd Hendricks", email = "todd@auraprotocol.org"}]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving :: Compression",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["compression", "ai", "agents", "aiwire", "mcp", "a2a", "json-rpc", "edge"]
dependencies = []
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
aura_compression = ["native/*.so", "native/*.dylib", "native/*.dll"]

[project.scripts]
aura-compress = "aura_compression.cli.compress:main"
aura-decompress = "aura_compression.cli.decompress:main"
aura-server = "aura_compression.cli.server:main"
aura-benchmark = "aura_compression.cli.benchmark:main"
aura-aiwire-compatibility = "aura_compression.cli.aiwire_compatibility:main"
aura-aiwire-dictionary-generate = "aura_compression.cli.aiwire_dictionary_generate:main"
aura-aiwire-resume-cache = "aura_compression.cli.aiwire_resume_cache:main"
aura-proxy = "aura_compression.cli.proxy:main"
aura-proxy-benchmark = "aura_compression.cli.proxy_benchmark:main"
aura-proxy-fixture-server = "aura_compression.cli.proxy_fixture_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.12.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
]
websocket = [
    "websockets>=10.0",
]

[project.urls]
Homepage = "https://github.com/H-XX-D/AURA"
Documentation = "https://github.com/H-XX-D/AURA#readme"
Repository = "https://github.com/H-XX-D/AURA"
"Bug Tracker" = "https://github.com/H-XX-D/AURA/issues"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
pythonpath = ["src"]
# coverage options (requires pytest-cov: pip install pytest-cov)
# addopts = "-ra -q --strict-markers --cov=src/aura_compression --cov-report=html --cov-report=term --cov-fail-under=80"
testpaths = ["tests"]
markers = [
    "asyncio: marks tests as async (using pytest-asyncio)",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
